--- a/src/GUI/SignUpPage.form
+++ b/src/GUI/SignUpPage.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="827" height="585"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5131855"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="91cdb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="fcb5b" class="javax.swing.JButton" binding="photoButton" default-binding="true">
@@ -27,11 +31,14 @@
         </children>
       </grid>
       <grid id="99359" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="0" left="155" bottom="0" right="200"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+          <font size="22" style="1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="40823" class="javax.swing.JLabel">
@@ -39,6 +46,8 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094769"/>
               <text value="e-mail"/>
             </properties>
           </component>
@@ -47,6 +56,8 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094769"/>
               <text value="Password"/>
             </properties>
           </component>
@@ -55,6 +66,8 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094769"/>
               <text value="Password (again)"/>
             </properties>
           </component>
@@ -64,7 +77,11 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="690ac" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
             <constraints>
@@ -72,7 +89,11 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="9e346" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
             <constraints>
@@ -80,13 +101,19 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="c44e4" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094769"/>
               <text value="Surname"/>
             </properties>
           </component>
@@ -95,6 +122,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094769"/>
               <text value="Name"/>
             </properties>
           </component>
@@ -104,7 +133,11 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="af57a" class="javax.swing.JTextField" binding="textField3" default-binding="true">
             <constraints>
@@ -112,13 +145,20 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="abb9e" class="javax.swing.JButton" binding="signUpButton" default-binding="true">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-6094769"/>
+              <font size="18" style="1"/>
+              <foreground color="-1"/>
               <text value="Sign Up"/>
             </properties>
           </component>
@@ -129,7 +169,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <vspacer id="cdb9c">
