--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,10 +3,10 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="42" y="47" width="617" height="363"/>
+      <xy x="42" y="47" width="611" height="454"/>
     </constraints>
     <properties>
-      <background color="-16381681"/>
+      <background color="-5131855"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,6 +15,7 @@
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -23,6 +24,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -31,6 +33,7 @@
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -47,6 +50,7 @@
           <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -55,6 +59,7 @@
           <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -63,6 +68,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -71,7 +77,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <borderPainted value="true"/>
           <contentAreaFilled value="true"/>
           <text value=""/>
@@ -82,7 +88,7 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -91,6 +97,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -99,6 +106,7 @@
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -108,13 +116,17 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+          <foreground color="-9211021"/>
+        </properties>
       </component>
       <component id="dbc39" class="javax.swing.JButton" binding="refreshButtonButton" default-binding="true">
         <constraints>
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value="RefreshButton"/>
         </properties>
       </component>
@@ -123,6 +135,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -131,6 +144,8 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
+          <foreground color="-9211021"/>
           <model/>
         </properties>
       </component>
@@ -139,6 +154,7 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
           <text value=""/>
         </properties>
       </component>
@@ -147,7 +163,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <borderPainted value="false"/>
           <contentAreaFilled value="true"/>
           <foreground color="-1"/>
