--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -3,50 +3,56 @@
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="827" height="587"/>
+      <xy x="20" y="20" width="939" height="616"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5131855"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="930fb" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="930fb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+          <doubleBuffered value="true"/>
+        </properties>
         <border type="none"/>
         <children>
-          <component id="b1577" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="b1577" class="javax.swing.JButton" binding="button1">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <preferred-size width="78" height="116"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="150" height="-1"/>
+                <preferred-size width="150" height="116"/>
               </grid>
             </constraints>
             <properties>
-              <font/>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <font size="16" style="1"/>
+              <foreground color="-1"/>
               <hideActionText value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <margin top="0" left="0" bottom="0" right="0"/>
-              <text value="Button"/>
+              <opaque value="true"/>
+              <text value="ADD PHOTO"/>
               <verticalAlignment value="0"/>
             </properties>
           </component>
-          <vspacer id="fdd60">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <preferred-size width="11" height="116"/>
-              </grid>
-            </constraints>
-          </vspacer>
         </children>
       </grid>
       <grid id="c1f90" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="0" left="100" bottom="0" right="150"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="78425" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -55,13 +61,19 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="cc9de" class="javax.swing.JLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094768"/>
               <text value="Price"/>
             </properties>
           </component>
@@ -71,21 +83,32 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="11d82" class="javax.swing.JLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094768"/>
+              <horizontalAlignment value="4"/>
+              <horizontalTextPosition value="4"/>
               <text value="Description"/>
             </properties>
           </component>
           <component id="c5d73" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-9211021"/>
+              <font size="22" style="1"/>
+              <foreground color="-6094768"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <text value="Title"/>
@@ -97,13 +120,19 @@
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
           <component id="37140" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="22" style="1"/>
+              <foreground color="-6094768"/>
               <text value="Label"/>
             </properties>
           </component>
@@ -111,7 +140,11 @@
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-16768928"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -120,7 +153,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <vspacer id="26898">
@@ -133,6 +168,13 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <defaultCapable value="false"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
+              <opaque value="true"/>
               <text value="ADD"/>
             </properties>
           </component>
