--- a/src/GUI/LoginPage.form
+++ b/src/GUI/LoginPage.form
@@ -7,18 +7,18 @@
     </constraints>
     <properties>
       <autoscrolls value="false"/>
-      <background color="-16381681"/>
+      <background color="-5131855"/>
       <opaque value="true"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="24986" binding="logpanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="24986" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <enabled value="false"/>
           <focusCycleRoot value="true"/>
           <foreground color="-16381681"/>
@@ -33,7 +33,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <doubleBuffered value="true"/>
           <enabled value="true"/>
           <focusable value="false"/>
@@ -86,7 +86,7 @@
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-16381681"/>
+              <background color="-5131855"/>
             </properties>
             <border type="none"/>
             <children/>
@@ -97,7 +97,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-16381681"/>
+              <background color="-5131855"/>
             </properties>
             <border type="none"/>
             <children/>
@@ -220,7 +220,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16381681"/>
+          <background color="-5131855"/>
           <enabled value="true"/>
           <focusCycleRoot value="true"/>
           <focusTraversalPolicyProvider value="true"/>
