--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="42" y="47" width="611" height="454"/>
+      <xy x="42" y="47" width="660" height="524"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
@@ -12,42 +12,49 @@
     <children>
       <component id="6d593" class="javax.swing.JButton" binding="product4">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="a8905" class="javax.swing.JButton" binding="product9">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="7bc6e" class="javax.swing.JButton" binding="product8">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="46741" class="javax.swing.JButton" binding="product7">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="822a9" class="javax.swing.JButton" binding="downScrollButton">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-5131855"/>
@@ -56,7 +63,9 @@
       </component>
       <component id="98fd4" class="javax.swing.JButton" binding="upScrollButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-5131855"/>
@@ -65,48 +74,52 @@
       </component>
       <component id="d1739" class="javax.swing.JButton" binding="product6">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="ee368" class="javax.swing.JButton" binding="product2">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
-          <borderPainted value="true"/>
+          <borderPainted value="false"/>
           <contentAreaFilled value="true"/>
           <text value=""/>
         </properties>
       </component>
       <component id="83686" class="javax.swing.JButton" binding="product3">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="cac45" class="javax.swing.JButton" binding="product5">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="a9e3e" class="javax.swing.JButton" binding="product12">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
@@ -132,10 +145,11 @@
       </component>
       <component id="e85c5" class="javax.swing.JButton" binding="product10">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
@@ -151,16 +165,17 @@
       </component>
       <component id="da1bb" class="javax.swing.JButton" binding="product11">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <borderPainted value="false"/>
           <text value=""/>
         </properties>
       </component>
       <component id="f97ee" class="javax.swing.JButton" binding="product1">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
